src/test/deca/context/invalid/void-declaration.des
we can't declare an identifier with type void